--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Class Selectors</title>
-    </head>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Class Selectors</title>
+  </head>
 
-    <body>
-        <div class="primary-box">
-            <h2>Primary Box</h2>
-            <p>Some text in the box</p>
+  <body>
+    <div class="primary-box">
+      <h2>Primary Box</h2>
+      <p>Some text in the box</p>
 
-            <div class="inside-box">
-                <h3>An Inner Box</h3>
-                <p>With some text in it.</p>
-            </div>
-        </div>
+      <div class="inside-box">
+        <h3>An Inner Box</h3>
+        <p>With some text in it.</p>
+      </div>
+      <div style="padding-top: 30px"></div>
+    </div>
 
-        <div class="secondary-box">
-            <h2>Secondary Box</h2>
-            <p>Some text in the box</p>
+    <div class="secondary-box">
+      <h2>Secondary Box</h2>
+      <p>Some text in the box</p>
 
-            <div class="inside-box">
-                <h3>An Inner Box</h3>
-                <p>With some text in it.</p>
-            </div>            
-        </div>
+      <div class="inside-box">
+        <h3>An Inner Box</h3>
+        <p>With some text in it.</p>
+      </div>
+      <div style="padding-top: 30px"></div>
+    </div>
 
-        <div class="primary-box">
-            <h2>Primary Box</h2>
-            <p>Some text in the box</p>
+    <div class="primary-box">
+      <h2>Primary Box</h2>
+      <p>Some text in the box</p>
 
-            <div class="inside-box">
-                <h3>An Inner Box</h3>
-                <p>With some text in it.</p>
-            </div>            
-        </div>
-    
-        <div class="secondary-box">
-            <h2>Secondary Box</h2>
-            <p>Some text in the box</p>
+      <div class="inside-box">
+        <h3>An Inner Box</h3>
+        <p>With some text in it.</p>
+      </div>
+      <div style="padding-top: 30px"></div>
+    </div>
 
-            <div class="inside-box">
-                <h3>An Inner Box</h3>
-                <p>With some text in it.</p>
-            </div>            
-        </div>        
-    </body>
+    <div class="secondary-box">
+      <h2>Secondary Box</h2>
+      <p>Some text in the box</p>
+
+      <div class="inside-box">
+        <h3>An Inner Box</h3>
+        <p>With some text in it.</p>
+      </div>
+      <div style="padding-top: 30px"></div>
+    </div>
+  </body>
 </html>
